// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`(empty) 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
  ],
  "result": {
    "filesToLoadFirst": [],
    "lang": null,
    "target": "repl",
  },
}
`;

exports[`../something.js --lang 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "../something.js",
    "--lang",
  ],
  "result": {
    "message": "--lang requires an argument: The language to use.",
    "target": "invalid",
  },
}
`;

exports[`../something.js --lang potato 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "../something.js",
    "--lang",
    "potato",
  ],
  "result": {
    "message": "Invalid --lang: "potato".
Valid values for --lang are js, javascript, ts, typescript, jsx, tsx, coffee, coffeescript or civet.
",
    "target": "invalid",
  },
}
`;

exports[`/tmp/something -v --help 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "/tmp/something",
    "-v",
    "--help",
  ],
  "result": {
    "file": "/tmp/something",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "run-file",
  },
}
`;

exports[`-- --require 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--",
    "--require",
  ],
  "result": {
    "filesToLoadFirst": [],
    "lang": null,
    "target": "repl",
  },
}
`;

exports[`-- -r 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--",
    "-r",
  ],
  "result": {
    "filesToLoadFirst": [],
    "lang": null,
    "target": "repl",
  },
}
`;

exports[`-- -v 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--",
    "-v",
  ],
  "result": {
    "filesToLoadFirst": [],
    "lang": null,
    "target": "repl",
  },
}
`;

exports[`-- 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--",
  ],
  "result": {
    "filesToLoadFirst": [],
    "lang": null,
    "target": "repl",
  },
}
`;

exports[`--eval "2 + 2" -- --require 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--eval",
    "2 + 2",
    "--",
    "--require",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "eval",
  },
}
`;

exports[`--eval "2 + 2" -- -r 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--eval",
    "2 + 2",
    "--",
    "-r",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "eval",
  },
}
`;

exports[`--eval "2 + 2" --lang 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--eval",
    "2 + 2",
    "--lang",
  ],
  "result": {
    "message": "--lang requires an argument: The language to use.",
    "target": "invalid",
  },
}
`;

exports[`--eval "2 + 2" --lang coffee 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--eval",
    "2 + 2",
    "--lang",
    "coffee",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [],
    "lang": "coffee",
    "target": "eval",
  },
}
`;

exports[`--eval "2 + 2" 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--eval",
    "2 + 2",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "eval",
  },
}
`;

exports[`--eval --lang js 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--eval",
    "--lang",
    "js",
  ],
  "result": {
    "code": "--lang",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "eval",
  },
}
`;

exports[`--eval 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--eval",
  ],
  "result": {
    "message": "Please specify the code string to run. For example: yavascript -e 'echo("hi")'",
    "target": "invalid",
  },
}
`;

exports[`--help 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--help",
  ],
  "result": {
    "target": "help",
  },
}
`;

exports[`--lang ../something.js 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--lang",
    "../something.js",
  ],
  "result": {
    "message": "Invalid --lang: "../something.js".
Valid values for --lang are js, javascript, ts, typescript, jsx, tsx, coffee, coffeescript or civet.
",
    "target": "invalid",
  },
}
`;

exports[`--lang 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--lang",
  ],
  "result": {
    "message": "--lang requires an argument: The language to use.",
    "target": "invalid",
  },
}
`;

exports[`--lang jsx ../something.js 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--lang",
    "jsx",
    "../something.js",
  ],
  "result": {
    "file": "../something.js",
    "filesToLoadFirst": [],
    "lang": "jsx",
    "target": "run-file",
  },
}
`;

exports[`--lang tsx --eval "2 + 2" 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--lang",
    "tsx",
    "--eval",
    "2 + 2",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [],
    "lang": "tsx",
    "target": "eval",
  },
}
`;

exports[`--lang tsx -e "2 + 2" 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--lang",
    "tsx",
    "-e",
    "2 + 2",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [],
    "lang": "tsx",
    "target": "eval",
  },
}
`;

exports[`--license 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--license",
  ],
  "result": {
    "target": "license",
  },
}
`;

exports[`--print-types 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--print-types",
  ],
  "result": {
    "target": "print-types",
  },
}
`;

exports[`--require 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--require",
  ],
  "result": {
    "message": "--require requires an argument: The file to preload.",
    "target": "invalid",
  },
}
`;

exports[`--require some-file --eval "2 + 2" 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--require",
    "some-file",
    "--eval",
    "2 + 2",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [
      "some-file",
    ],
    "lang": null,
    "target": "eval",
  },
}
`;

exports[`--require some-file --require another-file 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--require",
    "some-file",
    "--require",
    "another-file",
  ],
  "result": {
    "filesToLoadFirst": [
      "some-file",
      "another-file",
    ],
    "lang": null,
    "target": "repl",
  },
}
`;

exports[`--require some-file --require another-file main-file 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--require",
    "some-file",
    "--require",
    "another-file",
    "main-file",
  ],
  "result": {
    "file": "main-file",
    "filesToLoadFirst": [
      "some-file",
      "another-file",
    ],
    "lang": null,
    "target": "run-file",
  },
}
`;

exports[`--require some-file -e "2 + 2" 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--require",
    "some-file",
    "-e",
    "2 + 2",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [
      "some-file",
    ],
    "lang": null,
    "target": "eval",
  },
}
`;

exports[`--require some-file 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--require",
    "some-file",
  ],
  "result": {
    "filesToLoadFirst": [
      "some-file",
    ],
    "lang": null,
    "target": "repl",
  },
}
`;

exports[`--require some-file main-file 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--require",
    "some-file",
    "main-file",
  ],
  "result": {
    "file": "main-file",
    "filesToLoadFirst": [
      "some-file",
    ],
    "lang": null,
    "target": "run-file",
  },
}
`;

exports[`--version 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "--version",
  ],
  "result": {
    "target": "version",
  },
}
`;

exports[`-e "2 + 2" --lang coffee 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-e",
    "2 + 2",
    "--lang",
    "coffee",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [],
    "lang": "coffee",
    "target": "eval",
  },
}
`;

exports[`-e "2 + 2" 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-e",
    "2 + 2",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "eval",
  },
}
`;

exports[`-e 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-e",
  ],
  "result": {
    "message": "Please specify the code string to run. For example: yavascript -e 'echo("hi")'",
    "target": "invalid",
  },
}
`;

exports[`-h 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-h",
  ],
  "result": {
    "target": "help",
  },
}
`;

exports[`-r 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-r",
  ],
  "result": {
    "message": "-r requires an argument: The file to preload.",
    "target": "invalid",
  },
}
`;

exports[`-r some-file --eval "2 + 2" 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-r",
    "some-file",
    "--eval",
    "2 + 2",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [
      "some-file",
    ],
    "lang": null,
    "target": "eval",
  },
}
`;

exports[`-r some-file -e "2 + 2" 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-r",
    "some-file",
    "-e",
    "2 + 2",
  ],
  "result": {
    "code": "2 + 2",
    "filesToLoadFirst": [
      "some-file",
    ],
    "lang": null,
    "target": "eval",
  },
}
`;

exports[`-r some-file -r another-file 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-r",
    "some-file",
    "-r",
    "another-file",
  ],
  "result": {
    "filesToLoadFirst": [
      "some-file",
      "another-file",
    ],
    "lang": null,
    "target": "repl",
  },
}
`;

exports[`-r some-file -r another-file main-file 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-r",
    "some-file",
    "-r",
    "another-file",
    "main-file",
  ],
  "result": {
    "file": "main-file",
    "filesToLoadFirst": [
      "some-file",
      "another-file",
    ],
    "lang": null,
    "target": "run-file",
  },
}
`;

exports[`-r some-file 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-r",
    "some-file",
  ],
  "result": {
    "filesToLoadFirst": [
      "some-file",
    ],
    "lang": null,
    "target": "repl",
  },
}
`;

exports[`-r some-file main-file 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-r",
    "some-file",
    "main-file",
  ],
  "result": {
    "file": "main-file",
    "filesToLoadFirst": [
      "some-file",
    ],
    "lang": null,
    "target": "run-file",
  },
}
`;

exports[`-v 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-v",
  ],
  "result": {
    "target": "version",
  },
}
`;

exports[`-version 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "-version",
  ],
  "result": {
    "target": "version",
  },
}
`;

exports[`my-file --require 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "my-file",
    "--require",
  ],
  "result": {
    "file": "my-file",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "run-file",
  },
}
`;

exports[`my-file --require some-file 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "my-file",
    "--require",
    "some-file",
  ],
  "result": {
    "file": "my-file",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "run-file",
  },
}
`;

exports[`my-file -r 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "my-file",
    "-r",
  ],
  "result": {
    "file": "my-file",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "run-file",
  },
}
`;

exports[`my-file -r some-file 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "my-file",
    "-r",
    "some-file",
  ],
  "result": {
    "file": "my-file",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "run-file",
  },
}
`;

exports[`some-file -- --hi 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "some-file",
    "--",
    "--hi",
  ],
  "result": {
    "file": "some-file",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "run-file",
  },
}
`;

exports[`something.js --lang coffee 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "something.js",
    "--lang",
    "coffee",
  ],
  "result": {
    "file": "something.js",
    "filesToLoadFirst": [],
    "lang": "coffee",
    "target": "run-file",
  },
}
`;

exports[`something.js 1`] = `
{
  "argv": [
    "/usr/local/bin/yavascript",
    "something.js",
  ],
  "result": {
    "file": "something.js",
    "filesToLoadFirst": [],
    "lang": null,
    "target": "run-file",
  },
}
`;
